<resources>
    <string name="app_name">Digital Clock</string>
    <string name="app_full_name">Elegant Digital Clock</string>
    <string name="alarm_time">Alarm time</string>
    <string name="switch_alarm_on">On</string>
    <string name="switch_alarm_off">Off</string>
    <string name="alarm_stop">Stop</string>
    <string name="alarm">Alarm</string>
    <string name="color_r">R</string>
    <string name="color_g">G</string>
    <string name="color_b">B</string>
    <string name="ok">OK</string>
    <string name="default_color">Default\nColor</string>
    <string name="unify_time_colors">unify\ntime colors</string>
    <string name="unify_time_colors_dialog_message">All time colors will be unified.\nIs it OK?</string>
    <string name="confirming_app_finish_dialog_message">This app will be closed.\nIs it OK?</string>
    <string name="need_to_allow_display_over_other_apps_to_enable_alarm">You need to allow display over other apps to enable alarm function.\nWill you go setting?</string>
    <string name="need_to_allow_display_over_other_apps_to_enable_overlay_clock">You need to allow display over other apps to enable this function.\nWill you go setting?</string>
    <string name="description_notification">Display operation of clock.</string>
    <string name="clock_visible">Display clock</string>
    <string name="clock_hide">Hide clock</string>
    <string name="home">Home</string>
    <string name="finish_app">Exit</string>
    <string name="setting_always_show_clock">Clock can be displayed on the home screen, etc.</string>
    <string name="background_settings">Background settings</string>
    <string name="setting_menu_upgrade">Upgrade this app</string>
    <string name="go_setting">Go setting</string>
    <string name="apply_picture">Picture</string>
    <string name="apply_color">Color</string>
    <string name="setting">Setting</string>
    <string name="reset">Reset</string>
    <string name="alert_no_alarm_data">Not exist alarm data.</string>
    <string name="premium">Premium</string>
    <string name="catch_copy_premium">Experience an even more\nelegant digital clock!</string>
    <string name="already_upgraded">Already upgraded!\nThe following functions is applied.</string>
    <string name="no_ads">No ads.</string>
    <string name="no_ads_desc">All ads aren\'t displayed.</string>
    <string name="activate_picture_background">Activate picture.</string>
    <string name="activate_picture_background_desc">You can set a picture on the clock background.</string>
    <string name="upgrade">Upgrade%1$s</string>
    <string name="attention">Attention</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_to_access_google_play">Failed to connect to Google Play.\nPlease retry.</string>
    <string name="failed_to_purchase_item">Failed to purchase item.\nPlease check your payment method.</string>
    <string name="msg_update_premium_state_pending">The item you purchased will be reflected after the purchase process is completed.\n\n(※)Please display this screen again after a few minutes.</string>
    <string name="msg_must_upgrade_premium">You must upgrade this app to set background picture.\nDo you want to display operation screen?</string>
    <string name="msg_grant_post_notification_permission">You must allow notification permission to enable the function.\nYou can also do it on your devices settings app.</string>
</resources>
